--- a/src/components/landing-page.css
+++ b/src/components/landing-page.css
@@ -48,9 +48,10 @@ table {
 	border-spacing: 0;
 }
 
+/*  */
 * {
 	box-sizing: border-box;
-	text-decoration: none !important;
+	text-decoration: none;
 }
 
 a {
