update background images

--- a/src/components/landing-page.css
+++ b/src/components/landing-page.css
@@ -108,14 +108,14 @@ h2 {
 }
 
 #github {
-	background-image: url('../assets/images/pink-weird.jpg');
+	background-image: url('../assets/images/point.jpg');
 	color: white;
 	background-size: cover;
 	background-repeat: no-repeat;
 }
 
 #sign-up {
-	background-image: url('../assets/images/point.jpg');
+	background-image: url('../assets/images/airport.jpg');
 	color: white;
 	background-size: cover;
 	background-repeat: no-repeat;
