--- a/src/components/landing-page.css
+++ b/src/components/landing-page.css
@@ -54,7 +54,10 @@ h2 {
 }
 
 #about {
-	background-image: url('../assets/images/outdoor.jpg');
+	background-image: linear-gradient(
+		to right bottom,
+		rgba(100, 107, 98, 0.568),
+		rgba(185, 185, 185, 0.568)),  url('../assets/images/outdoor.jpg');
 	color: white;
 	background-size: cover;
 	background-repeat: no-repeat;
