add comment justifying important flag

--- a/src/components/header-bar.css
+++ b/src/components/header-bar.css
@@ -30,6 +30,7 @@ a {
 
 /* General sidebar styles */
 .bm-menu {
+	/* User important flag to override stubborn default setting */
 	overflow: hidden !important;
   background: #373a47;
   padding: 2.5em 1.5em 0;
