--- a/src/components/landing-page.css
+++ b/src/components/landing-page.css
@@ -1,5 +1,3 @@
-
-
 a {
 	color: inherit;
 }
@@ -74,24 +72,11 @@ header {
   line-height: 1.1em;
 }
 
-#github {
-	/* background-image: url('../assets/images/point.jpg');
-	color: white;
-	background-size: cover;
-	background-repeat: no-repeat; */
-	background: #4DA0B0;  /* fallback for old browsers */
-background: -webkit-linear-gradient(to bottom, #D39D38, #4DA0B0);  /* Chrome 10-25, Safari 5.1-6 */
-background: linear-gradient(to bottom, #D39D38, #4DA0B0); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
-
-
-}
-
 #sign-up {
-	/* background-image: url('../assets/images/airport.jpg');
-	color: white;
-	background-size: cover;
-	background-repeat: no-repeat; */
-	background: #4DA0B0;  /* fallback for old browsers */
-	background: -webkit-linear-gradient(to top, #D39D38, #4DA0B0);  /* Chrome 10-25, Safari 5.1-6 */
-	background: linear-gradient(to top, #D39D38, #4DA0B0); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
+background: #fc4a1a;  /* fallback for old browsers */
+background: -webkit-linear-gradient(to right, #f7b733, #fc4a1a);  /* Chrome 10-25, Safari 5.1-6 */
+background: linear-gradient(to right, #f7b733, #fc4a1a); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
+color: white;
+font-family: 'Lato';
+line-height: 2;
 }
