--- a/src/components/about.css
+++ b/src/components/about.css
@@ -1,6 +1,6 @@
 .about-container {
   text-align: center;
-  height: 1000px;
+  height: 100%;
   background: #f1f1f1;
   color: #999;
   font-family: 'Lato';
@@ -8,7 +8,7 @@
 }
 
 .about-text-section {
-  height: 50vh;
+  height: 50%;
   display: flex;
   align-items: center;
   flex-direction: column;
@@ -27,15 +27,17 @@
 }
 
 .about-img-section {
-  height: 50vh;
+  height: 50%;
   display: flex;
   flex-direction: row;
-  justify-content: center;
+  justify-content: space-evenly;
   background: #fff;
 }
 
 .about-img {
   max-width: 300px;
   max-height: 250px;
-  margin: 20px;
+  margin-top: 3.5em;
+  align-items: center;
+  border-radius: 5px;
 }
