webCam updates for videoList + userList + socket

--- a/src/components/applicationPage/webCam.css
+++ b/src/components/applicationPage/webCam.css
@@ -43,10 +43,12 @@ z-index: 10;
 
 }
 
-#users div {
+#users li {
   color: red;
   text-decoration: underline;
   cursor: pointer;
+  width: 300px;
+  position: relative;
 }
 
 #users .active {
