--- a/src/components/landing-page.css
+++ b/src/components/landing-page.css
@@ -16,13 +16,27 @@ header {
 
 .landing-header {
   font-size: .9em;
-  font-family: 'Lato';
-  font-weight: 300;
+/* font-family: 'Croissant One', cursive; */
+/* font-family: 'Berkshire Swash', cursive; */
+/* font-family: 'Playfair Display SC', serif; */
+/* font-family: 'Amiri', serif; */
+/* font-family: 'Prata', serif; */
+/* font-family: 'Yeseva One', cursive; */
+/* font-family: 'Averia Serif Libre', cursive; */
+
+	font-weight: 300;
 }
 
 .landing-sub-header {
   font-size: .5em;
-  font-family: 'Lato';
+/* font-family: 'Croissant One', cursive; */
+/* font-family: 'Berkshire Swash', cursive; */
+/* font-family: 'Playfair Display SC', serif; */
+/* font-family: 'Amiri', serif; */
+/* font-family: 'Prata', serif; */
+/* font-family: 'Yeseva One', cursive; */
+/* font-family: 'Averia Serif Libre', cursive; */
+
   margin-bottom: 300px;
 }
 
@@ -43,6 +57,10 @@ header {
 	margin: 0 auto;
 }
 
+.scroll-icon {
+	width: 1em;
+}
+
 #header {
   background-image: url('../assets/images/outdoor.jpg');
 	color: white;
@@ -50,7 +68,7 @@ header {
 	background-repeat: no-repeat;
 	font-size: 4em;
   text-align: center;
-  line-height: 1.1em;
+	line-height: 1.1em;
 }
 
 #sign-up {
