Changing font type

--- a/src/components/landing-page.css
+++ b/src/components/landing-page.css
@@ -15,7 +15,7 @@ header {
 }
 
 .landing-header {
-  font-size: .9em;
+  font-size: 1.2em;
 /* font-family: 'Croissant One', cursive; */
 /* font-family: 'Berkshire Swash', cursive; */
 /* font-family: 'Playfair Display SC', serif; */
