--- a/src/components/header-bar.css
+++ b/src/components/header-bar.css
@@ -14,7 +14,7 @@ a {
 
 /* Color/shape of burger icon bars */
 .bm-burger-bars {
-  background: #ffffff;
+  background: #777676;
 }
 
 /* Position and sizing of clickable cross button */
