CSS cleaned up in multiple components

--- a/src/components/ApplicationPage/Room.css
+++ b/src/components/ApplicationPage/Room.css
@@ -1,4 +1,4 @@
-.room{
+.room {
   display:flex;
   flex-direction: row;
   justify-content: flex-start;
@@ -10,7 +10,7 @@
   height: 100%;
 }
 
-.webCam-container {
+.webcam-container {
   top: 60px;
   position:relative;
 }
