Made Roboto main non-header text for now

--- a/src/index.css
+++ b/src/index.css
@@ -21,7 +21,8 @@ time, mark, audio, video {
 	border: 0;
 	font-size: 100%;
 	font: inherit;
-	vertical-align: baseline;
+  vertical-align: baseline;
+  font-family: 'Roboto', sans-serif;
 }
 /* HTML5 display-role reset for older browsers */
 article, aside, details, figcaption, figure,
@@ -49,7 +50,6 @@ table {
 
 html {
   height: 100%;
-  font-family: 'Ubuntu', sans-serif;
 }
 
 body, #root, .app {
