--- a/src/components/ApplicationPage/Editors/WhiteBoardEditorControls.css
+++ b/src/components/ApplicationPage/Editors/WhiteBoardEditorControls.css
@@ -1,4 +1,14 @@
 .whiteBoardControls-container {
     border: 5px solid black;
     width: 300px;
+    padding-top: 10px;
+    padding-bottom: 10px;
+}
+
+.tool {
+    width: 50px;
+    height: 50px;
+
+    border: 1px solid black;
+    
 }
