--- a/src/components/ApplicationPage/Editors/WhiteBoardEditorControls.css
+++ b/src/components/ApplicationPage/Editors/WhiteBoardEditorControls.css
@@ -9,6 +9,26 @@
     width: 50px;
     height: 50px;
 
+    margin-top: 5px;
+}
+
+.green-brush {
+    background-color: green;
+}
+
+.red-brush {
+    background-color: red;
+}
+.blue-brush {
+    background-color: blue;
+}
+.yellow-brush {
+    background-color: yellow;
+}
+.black-brush {
+    background-color: black;
+}
+
+.change-size-button {
     border: 1px solid black;
-    
 }
