--- a/src/components/ApplicationPage/Room.css
+++ b/src/components/ApplicationPage/Room.css
@@ -2,7 +2,9 @@
   display:flex;
   flex-direction: row;
   justify-content: flex-start;
-  height: 60vH;
+  height: 100%;
+  margin-left: 10px;
+  margin-right: 10px;
 }
 
 .room > section {
