All docs render 100% of half side, but codemirror is still annoying to render

--- a/src/components/ApplicationPage/EditorView.css
+++ b/src/components/ApplicationPage/EditorView.css
@@ -22,6 +22,14 @@
 }
 
 .CodeMirror {
-  height: 85vh;
+  height: 80vh;
 }
 
+.main-editor-wrapper {
+  height: 85vh;
+  border: 1px solid black;
+}
+
+.whiteboard-container, .upper-canvas {
+  height: 100% !important;
+}
