Still fixing CSS render

--- a/src/components/ApplicationPage/WebCam.css
+++ b/src/components/ApplicationPage/WebCam.css
@@ -6,6 +6,9 @@ video {
 .webcam-container {
   display: flex;
   flex-direction: column;
+  width: 30%;
+  border: 1px solid black;
+  height: 50%;
 }
 
 .video-box {
