Trying 70/30, looks good.  Trying background stretch for code editor

--- a/src/components/ApplicationPage/EditorView.css
+++ b/src/components/ApplicationPage/EditorView.css
@@ -26,11 +26,15 @@
 }
 
 .CodeMirror {
-  height: 80vh;
+  height: 81vh;
+}
+
+.CodeMirror-sizer {
+  height: 100%;
 }
 
 .editor-view-wrapper {
-  width: 60%;
+  width: 70%;
 }
 
 .main-editor-wrapper {
