colorChangebuttons + nuke css + buttons work

--- a/src/components/ApplicationPage/Editors/WhiteBoardEditorControls.css
+++ b/src/components/ApplicationPage/Editors/WhiteBoardEditorControls.css
@@ -33,6 +33,10 @@
     border-radius: 80px;
 }
 
+.nuke {
+    border: 1px solid black;
+}
+
 .change-size-button {
     border: 1px solid black;
 }
