--- a/src/components/ApplicationPage/WebCam.css
+++ b/src/components/ApplicationPage/WebCam.css
@@ -7,8 +7,8 @@ video {
   display: flex;
   flex-direction: column;
   border: 1px solid black;
-  height: 50%;
-  width: 30%;
+  /* height: 50%; */
+  /* width: 30%; */
 }
 
 .video-box {
