Flexbox setup at top level but need to move navbar to Room's level

--- a/src/components/ApplicationPage/WebCam.css
+++ b/src/components/ApplicationPage/WebCam.css
@@ -7,8 +7,7 @@ video {
   display: flex;
   flex-direction: column;
   border: 1px solid black;
-  /* height: 50%; */
-  /* width: 30%; */
+  height: 50%;
 }
 
 .video-box {
