--- a/src/components/ApplicationPage/Chat.css
+++ b/src/components/ApplicationPage/Chat.css
@@ -1,5 +1,10 @@
 .chat-wrapper {
   border: 1px solid black;
-  height:50%;
-  /* width: 100%; */
+  display: flex;
+  flex-direction: column;
+  height:50% !important;
+}
+
+.chat {
+  height: 100%;
 }
