--- a/src/components/LandingPage/LandingPage.css
+++ b/src/components/LandingPage/LandingPage.css
@@ -37,7 +37,7 @@ font-weight: 300;
   font-weight: 100;
 }
 
-.container {
+.container, .container-about {
   min-height: 100%;
   max-height: 100%;
 	display: flex;
@@ -46,6 +46,10 @@ font-weight: 300;
 	overflow-x: hidden;
   text-align: center;
   flex-direction: column;
+}
+
+.container-about {
+  justify-content: center;
 }
 
 footer {
