Video audio flexbox still stubborn but rendering on right side

--- a/src/components/ApplicationPage/AppNavBar.css
+++ b/src/components/ApplicationPage/AppNavBar.css
@@ -6,6 +6,11 @@
   display: flex;
   flex-direction: row-reverse;
   align-self: flex-end;
+  margin-left: 50%;
+}
+
+.right-li {
+  flex-direction:
 }
 
 .nav-bar-ul {
