--- a/src/components/ApplicationPage/WebCam.css
+++ b/src/components/ApplicationPage/WebCam.css
@@ -6,7 +6,8 @@ video {
 .webcam-container {
   display: flex;
   flex-direction: column;
-  border: 1px solid black;
+  border-top: 1px solid black;
+  border-right: 1px solid black;
   height: 50%;
 }
 
@@ -20,7 +21,7 @@ video {
   width: 100%;
   max-width: 640px;
   max-height: 480px;
-  border: 1px solid black;
+  /* border: 1px solid black; */
   margin-bottom: 10px;
 }
 
