--- a/src/components/ApplicationPage/AppNavBar.css
+++ b/src/components/ApplicationPage/AppNavBar.css
@@ -35,7 +35,7 @@
   text-align: left;
 }
 
-.editor-mode-text:hover, video, audio {
+.editor-mode-text, .video, .audio:hover {
   cursor:pointer;
  }
 
