--- a/src/components/ApplicationPage/AppNavBar.css
+++ b/src/components/ApplicationPage/AppNavBar.css
@@ -22,7 +22,6 @@
   margin-bottom: 0px;
   flex-direction: row;
   margin-right: 10%;
-  padding-bottom: 5px;
   padding-left: 0px;
   font-size: .8em;
 }
@@ -30,9 +29,9 @@
 .editor-mode-text {
   list-style-type: none;
   color: #141414;
-  font-size: 1.1em;
   margin-left: 15px;
   text-align: left;
+  flex-wrap: nowrap;
 }
 
 .editor-mode-text, .video, .audio:hover {
