--- a/src/components/LandingPage/Forms/LoginForm.css
+++ b/src/components/LandingPage/Forms/LoginForm.css
@@ -40,7 +40,7 @@ h1 {
 }
 
 .close {
-    color: #666464ee;
+    color: rgba(216, 216, 216, 0.933);
     margin-left: 90%;
     display: block;
     font-size: 35px;
