--- a/src/components/LandingPage/Forms/RegistrationForm.css
+++ b/src/components/LandingPage/Forms/RegistrationForm.css
@@ -1,6 +1,14 @@
-input {
+.reg-form-input {
   border: 0;
   outline: 0;
   border-bottom: 1px solid red;
   background-color: red;
+}
+
+#firstName, #lastName, #username, #password, #passwordConfirm  {
+  border: 0;
+  outline: 0;
+  border-bottom: 2px solid white;
+  color: white;
+  background: rgb(0, 111, 255);
 }
