--- a/src/components/ApplicationPage/RoomCreate.css
+++ b/src/components/ApplicationPage/RoomCreate.css
@@ -37,7 +37,18 @@
   display: block;
   margin: 20px auto;
   border-radius: 20px solid white;
-  color: #999;
+  background: rgb(0, 111, 255);
+  color: white;
+  border: 0;
+  outline: 0;
+  border-bottom: 2px solid white;
+}
+
+input:focus::-webkit-input-placeholder { color:transparent; }
+
+::placeholder {
+  color: white;
+  opacity: 1;
 }
 
 .btn-room {
