--- a/src/components/LandingPage/Forms/RegistrationForm.css
+++ b/src/components/LandingPage/Forms/RegistrationForm.css
@@ -10,7 +10,7 @@
   outline: 0;
   border-bottom: 2px solid white;
   color: white;
-  background: rgb(0, 111, 255);
+  background: rgb(244,153,115);
 }
 
 .reg-header {
