--- a/src/components/LandingPage/Forms/LoginForm.css
+++ b/src/components/LandingPage/Forms/LoginForm.css
@@ -7,7 +7,7 @@
   width: 350px;
   height: 500px;
   padding: 10px;
-  background: rgb(0, 111, 255);
+  background: rgb(244,153,115);
   font-size: 24px;
   color: white;
 }
@@ -18,7 +18,7 @@ h1 {
 }
 
 input:-webkit-autofill {
-  -webkit-box-shadow: inset 0 0 0px 9999px rgb(0, 111, 255);
+  -webkit-box-shadow: inset 0 0 0px 9999px rgb(244,153,115);
   -webkit-text-fill-color:white !important;
 }
 
